tests/integration/conformance/testdata/k8s/ingress/basic/mcp.yaml
constraints:
  - collection: istio/networking/v1alpha3/gateways
    check:
      - exactlyOne:
          - equals: {
            "Body": {
              "selector": {
                "istio": "ingress"
              },
              "servers": [
              {
                "hosts": [
                  "*"
                ],
                "port": {
                  "name": "http-80-i-foo-{{.Namespace}}",
                  "number": 80,
                  "protocol": "HTTP"
                }
              }
              ]
            },
            "Metadata": {
              "name": "istio-system/foo-istio-autogenerated-k8s-ingress"
            },
            "TypeURL": "type.googleapis.com/istio.networking.v1alpha3.Gateway"
        }


  - collection: istio/networking/v1alpha3/virtualservices
    check:
      - empty:
